@@ -23,3 +23,17 @@ volume_size = 25
 
 # temporal directory (default: /tmp)
 temp_dir=/tmp
+
+# Retrying configuration
+# This set of values are set when the uploading is done and some
+# retries are required to complete the backup
+# It follows a geometric progression:
+#    timeout_n = initial_value * scale_factor ^ (n-1)
+#
+# For instance, initial_value = 60s, scale_factor = 2, n_tries = 4
+# The backup will be tried 4 times after 60s, 120s, 240s before giving up
+#
+# This value is set in seconds
+initial_value=60
+scale_factor=2
+n_tries=4
