@@ -1,3 +1,9 @@
+HEAD
+	+ Use a geometric progression for timeout values for retrying
+ 	  connecting to backup servers when there are connectivity problems
+	+ Fixed event message when something goes wrong at first stages
+	+ Fixed bug in checking right method changing
+	+ Added a way to delete orphan metadata files
 2.0.9
 	+ Change one of our backup servers fingerprint
 	+ Using the new module name for cloud-prof package
